--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-spring.thymeleaf.cache: false
+#spring.thymeleaf.cache: false
 
-spring.datasource.url = jdbc:mysql://sql11.freemysqlhosting.net:3306/sql11176690
-spring.datasource.username = sql11176690
-spring.datasource.password = pMxzvdb6DN
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#H2
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+#MySQL
+#spring.datasource.url = jdbc:mysql://sql11.freemysqlhosting.net:3306/sql11176690
+#spring.datasource.username = sql11176690
+#spring.datasource.password = pMxzvdb6DN
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto = update
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
-#spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto = update
